# Gearbox

./: .gitignore  pyproject.toml
src/2_cycombine/: .Rhistory  main_first_remove_qc_naming.py
src/3_unito/: main.py  unito_objects.py
src/5_flowsom/: flowsom_objects.py
src/data_submission_tests/: metadata_generator.py
