[project]
name = "gearbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "albumentations>=2.0.8",
    "anndata==0.10.8",
    "dataset>=1.6.2",
    "fastparquet>=2024.11.0",
    "fcsparser>=0.2.8",
    "fcswrite>=0.6.2",
    "flowkit>=1.2.3",
    "flowsom>=0.2.1",
    "mudata>=0.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pytometry>=0.1.4",
    "scikit-image>=0.24.0",
    "torchvision>=0.22.0",
    "umap-learn>=0.5.9.post2",
    "unito",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]  # E: pycodestyle (PEP8), F: pyflakes, W: warnings
ignore = []

[tool.uv.sources]
unito = { git = "https://github.com/happyhypocrite/UNITO" }
